ecmascript/parser/tests/typescript-errors/tsc/decorators/invalid/decoratorOnInternalModule/input.ts.stderr
error: Decorators are not valid here
 --> $DIR/tests/typescript-errors/tsc/decorators/invalid/decoratorOnInternalModule/input.ts:3:1
  |
3 | @dec
  | ^^^^

